tests/baselines/reference/jsxElementsAsIdentifierNames.errors.txt
a.tsx(2,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== a.tsx (1 errors) ====
    declare const React: any;
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        interface IntrinsicElements {
            ["package"]: any;
        }
    }
    
    function A() {
        return <package />
    }
    
    function B() {
        return <package></package>
    }
    